refactor lemma 4.3 and introducing macros for incomming and outgoing nodes and capacity function

--- a/macros.tex
+++ b/macros.tex
@@ -6,15 +6,20 @@
 
 \newcommand{\BigO}[1]{$\mathcal O(#1)$}
 
+
+\newcommand{\incoming}[1]{#1'}
+\newcommand{\outgoing}[1]{#1''}
+\newcommand{\capa}{u}
+\newcommand{\capacity}[1]{u(#1)}
+
 \newcommand{\HypergraphDef}{$H = (V,E,c,\omega)$}
 \newcommand{\FlowNetworkDef}{$G = (V',E',c')$}
 \newcommand{\ShortT}[1]{{$T_{#1}(H)$}}
 \newcommand{\ShortExT}[2]{{$T_{#1}(H,#2)$}}
-\newcommand{\T}[1]{{$T_{#1}(H) = (V_{#1}, E_{#1},c_{#1})$}}
-\newcommand{\ExtendedT}[2]{{$T_{#1}(H,#2) = (V_{#1}, E_{#1},c_{#1})$}}
-\newcommand{\Hybrid}{{$T_{\text{Hybrid}}(H,V') = (V_{\text{Hybrid}}, E_{\text{Hybrid}},c_{\text{Hybrid}})$}}
+\newcommand{\T}[1]{{$T_{#1}(H) = (V_{#1}, E_{#1},\capa_{#1})$}}
+\newcommand{\ExtendedT}[2]{{$T_{#1}(H,#2) = (V_{#1}, E_{#1},\capa_{#1})$}}
+\newcommand{\Hybrid}{{$T_{\text{Hybrid}}(H,V') = (V_{\text{Hybrid}}, E_{\text{Hybrid}},\capa_{\text{Hybrid}})$}}
 \newcommand{\ShortHybrid}{{$T_{\text{Hybrid}}(H,V')$}}
-
 
 %Residual Capacity
 \newcommand{\R}[1]{{r_f({#1})}}
